adding healthcheck endpoint
